Implement RefreshTokens for logins. Update openApi doc. Cleanup gradle.
