# src/main/kotlin/textsummarizer/models/dto/request/RefreshTokenRequest.kt
@@ -1,0 +1,8 @@
+package textsummarizer.models.dto.request
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RefreshTokenRequest(
+    val refreshToken: String,
+)
