# src/main/kotlin/textsummarizer/models/dto/response/AuthResponse.kt
@@ -1,0 +1,9 @@
+package textsummarizer.models.dto.response
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class AuthResponse(
+    val accessToken: String,
+    val refreshToken: String
+)
