# src/main/kotlin/textsummarizer/models/dto/response/RefreshTokenResponse.kt
@@ -1,0 +1,8 @@
+package textsummarizer.models.dto.response
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RefreshTokenResponse(
+    val accessToken: String,
+)
