# src/main/resources/openapi/documentation.yaml
@@ -12,18 +12,18 @@ servers:
   - url: "http://voevoda.cvwerner.de"
     description: prod
 paths:
-  /api/v1/login:
+  /api/v1/auth/login:
     post:
-      description: "Takes the mobile_secret and returns a JWT token upon correct secret"
+      description: "Takes a # and returns an access and refresh JWT token upon correct secret"
       parameters:
         - name: "deviceId"
           in: "header"
-          required: false
+          required: true
           schema:
             type: "string"
       responses:
         "400":
-          description: "Wrong password"
+          description: "Missing deviceId Header"
           content:
             'text/plain':
               schema:
@@ -31,12 +31,60 @@ paths:
               examples:
                 Example#1:
                   value: "Missing deviceId header"
+        "401":
+          description: "Unauthorized"
+          content:
+            'text/plain':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Wrong password."
         "200":
           description: "OK"
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LoginDto"
+                $ref: "#/components/schemas/AuthResponse"
+  /api/v1/auth/refresh:
+    post:
+      description: "Takes the refreshToken generated by login and returns an access JWT token when handed the correct refresh token and deviceId"
+      parameters:
+        - name: "deviceId"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshTokenRequest'
+      responses:
+        "400":
+          description: "Missing deviceId Header"
+          content:
+            'text/plain':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Missing deviceId header"
+        "401":
+          description: "Unauthorized - DeviceId doesn't yet exist in the database, has thus never logged in"
+          content:
+            'text/plain':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Can't refresh for unregistered device with id: DEVICE_ID."
+        "200":
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RefreshTokenResponse"
   /api/v1/queries:
     post:
       description: "Used to process a query to an AI model"
@@ -71,7 +119,7 @@ paths:
                   value: "Missing deviceId header"
   /api/v1/queries/{id}:
     get:
-      description: ""
+      description: "Endpoint for receiving a certain query"
       parameters:
         - name: "id"
           in: "path"
@@ -115,6 +163,26 @@ paths:
                   value: "Hello World!"
 components:
   schemas:
+    RefreshTokenRequest:
+      description: Contains the refreshToken
+      type: object
+      properties:
+        refreshToken:
+          type: string
+    RefreshTokenResponse:
+      description: Response for granting a new accessToken
+      type: object
+      properties:
+        accessToken:
+          type: string
+    AuthResponse:
+      description: Response containing the accessToken and refreshToken
+      type: object
+      properties:
+        accessToken:
+          type: string
+        refreshToken:
+          type: string
     MobileQueryDto:
       type: "object"
       properties:
@@ -130,8 +198,3 @@ components:
       required:
         - "queryText"
         - "queryType"
-    LoginDto:
-      type: "object"
-      properties:
-        token:
-          type: "string"
